--- a/Web/032/index.html
+++ b/Web/032/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>小洪同学&#10084;&#65039;</title> 
+    <title>小洪&#10084;&#65039;</title> 
     <script src="https://cdn.jsdelivr.net/gh/zyoushuo/Blog/hexo/js/mouse_slide.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/zyoushuo/Blog/hexo/js/clicklove.js"></script>
   <style type="text/css">
@@ -267,7 +267,7 @@
   })(document.getElementById('pinkboard'));
 </script>
 <div class="namebox">
-  <h1>小洪同学&#10084;&#65039;小贺同学</h1>
+  <h1>小洪同学&#10084;&#65039;小贺</h1>
 </div>
 </body>
 </html>
